// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PermissionButtons does not render read and write badges when user is not owner 1`] = `
<div>
  <h3
    class="text-capitalize"
  >
    accepted
  </h3>
  <br />
  <div
    class="list-group"
  >
    
    <div
      data-test-id="accepted-user-2"
    >
      <div
        class="list-group-item"
      >
        bar@example.com
      </div>
    </div>
    <div
      data-test-id="accepted-user-3"
    >
      <div
        class="list-group-item"
      >
        baz@example.com
      </div>
    </div>
  </div>
  <br />
</div>
`;

exports[`PermissionButtons renders read and write badges when user is owner 1`] = `
<div>
  <h3
    class="text-capitalize"
  >
    accepted
  </h3>
  <br />
  <div
    class="list-group"
  >
    
    <div
      data-test-id="accepted-user-2"
    >
      <button
        class="d-flex justify-content-between align-items-center list-group-item list-group-item-action"
      >
        <span>
          bar@example.com
        </span>
        <span
          class="badge badge-success"
          data-test-id="perm-write"
        >
          write
        </span>
      </button>
    </div>
    <div
      data-test-id="accepted-user-3"
    >
      <button
        class="d-flex justify-content-between align-items-center list-group-item list-group-item-action"
      >
        <span>
          baz@example.com
        </span>
        <span
          class="badge badge-primary"
          data-test-id="perm-read"
        >
          read
        </span>
      </button>
    </div>
  </div>
  <br />
</div>
`;
